Make output file optional, and output to stdout when missing Output errors using console.error instead of console.log

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "mocha test/*.js"
+    "test": "mocha -R min test/*.js"
   },
   "keywords": [
     "javascript"
